fixed spacing on the chord selector in the dictionary

--- a/src/chords/chordgroup/chordgroup.module.css
+++ b/src/chords/chordgroup/chordgroup.module.css
@@ -1,7 +1,7 @@
 .layout {
 	display: grid;
-	grid-template-columns: 70% 30%;
-	grid-template-rows: auto max-content;
+	grid-template-columns: 7fr 3fr;
+	grid-template-rows: 9rem 1fr;
 	grid-template-areas:
 		"selector sidebar"
 		"main sidebar";
@@ -11,6 +11,8 @@
 	grid-area: sidebar;
 	border: 1px solid var(--bg-colour);
 	border-radius: 0.3rem;
+	margin: 1rem;
+	padding: 1.5rem;
 }
 
 .selector {
